prevent zoom on iphone chrome

--- a/client/src/pages/interview/addInterview/AddInterview.module.css
+++ b/client/src/pages/interview/addInterview/AddInterview.module.css
@@ -64,7 +64,7 @@
     }
 
     .addInterview input {
-        font-size: 0.875rem;
+        font-size: 16px;
     }
 
     .addInterview button {
